syntax = "proto3";

package yandex.cloud.priv.datatransfer.v1.endpoint;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/endpoint;tm_server_endpoint";

import "google/protobuf/empty.proto";
import "yandex/cloud/priv/sensitive.proto";

enum ObjectTransferStage {
    OBJECT_TRANSFER_STAGE_UNSPECIFIED = 0;
    BEFORE_DATA = 1;
    AFTER_DATA = 2;
    NEVER = 3;
}
enum CleanupPolicy {
    CLEANUP_POLICY_UNSPECIFIED = 0;
    DISABLED = 1;
    DROP = 2;
    TRUNCATE = 3;
}
enum ParsingFormat {
    PARSING_FORMAT_UNSPECIFIED = 0;
    JSON = 1;
    TSKV = 2;
    CSV = 3;
    ORC = 4;
    PARQUET = 5;
}
enum PartType {
    PART_TYPE_UNSPECIFIED = 0;
    // Hour
    HOUR = 1;
    // Day
    DAY = 2;
    // Month
    MONTH = 3;
}
enum ColumnType {
    COLUMN_TYPE_UNSPECIFIED = 0;
    INT64 = 14;
    INT32 = 1;
    INT16 = 2;
    INT8 = 3;
    UINT64 = 4;
    UINT32 = 5;
    UINT16 = 6;
    UINT8 = 7;
    DOUBLE = 8;
    BOOLEAN = 9;
    STRING = 10;
    UTF8 = 11;
    ANY = 12;
    DATETIME = 13;
}
enum ObjectStorageBackupMode {
    OBJECT_STORAGE_BACKUP_MODE_UNSPECIFIED = 0;
    ERROR_ONLY = 1;
    ALL_DOCUMENTS = 2;
    NO_BACKUP = 3;
}
message AltName {
    // From table name
    string from_name = 1;
    // To table name
    string to_name = 2;
}
message YavValue {
    string version_id = 1;
    string key = 2;
}
message Secret {
    oneof value {
        // Password
        string raw = 1 [(sensitive) = true];
        YavValue secret = 2;
    }
}
message ColSchema {
    string name = 1;
    ColumnType type = 2;
    bool key = 3;
    bool required = 4;
    string path = 5;
}
message Rotator {
    int64 keep_part_count = 1;
    PartType part_type = 2;
    int64 part_size = 3;
    string time_column = 4;
    // Table naming template
    // 
    // Default naming template is "<NAME>/<PARTITION>", where <NAME> is table name and
    // <PARTITION> is partition name based on timestamp. Slash can be interpreted by YT
    // as path. WARNING! If one of the template parameter is absent in your custom
    // template, table names would be created as-is. 
    string table_name_template = 5;
}
message TLSMode {
    oneof tls_mode {
        google.protobuf.Empty disabled = 1;
        TLSConfig enabled = 2;
    }
}
message TLSConfig {
    // CA certificate
    // 
    // X.509 certificate of the certificate authority which issued the server's
    // certificate, in PEM format. When CA certificate is specified TLS is used to
    // connect to the server.
    string ca_certificate = 1;
}
message ColumnValue {
    oneof value {
        string string_value = 1;
    }
}
message DebeziumProperty {
    // Property name
    string key = 1;
    // Property value
    string value = 2;
}
message DataTransformationOptions {
    // Cloud Function
    string cloud_function = 1;
    // SA Account
    string service_account_id = 8;
    // Number of retries
    int64 number_of_retries = 2;
    // Buffer size for function
    string buffer_size = 3;
    // Flush interval
    string buffer_flush_interval = 4;
    // Invocation Timeout
    string invocation_timeout = 5;
    // ObjectStorage bucket for errors
    string object_storage_error_bucket = 6;
    // ObjectStorage bucket for backup
    ObjectStorageBackupMode backup_mode = 7;
}
