syntax = "proto3";

package yandex.cloud.priv.platform.alb.v1;

import "yandex/cloud/priv/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/platform/alb/v1;alb";
option java_outer_classname = "PALRL";

message CustomRateLimit {
  // Adds ("remote_address", "<trusted address from x-forwarded-for>")
  message RemoteAddress {
    string dummy = 777; // Workaround for ycp-tf generator bug.
  }

  // Adds ("destination_cluster", "<routed target cluster>")
  message Backend {
    string dummy = 777; // Workaround for ycp-tf generator bug.
  }

  // Adds ("<header_name>", "<header_value>")
  message RequestHeader {
    string header_name = 1;
  }

  oneof specifier {
    option (exactly_one) = true;
    RemoteAddress remote_address = 1;
    Backend backend = 2;
    RequestHeader request_header = 3;
  }
}

message RateLimit {
  repeated CustomRateLimit custom = 1;
}
